Использованы get вместо getFirst и getLast